--- a/INSTALL
+++ b/INSTALL
@@ -1,5 +1,8 @@
 ===== INSTALL (for Linux) =====
 You need to have following libraries first:
+* libespeak-dev
+* libutfcpp-dev
+* libsonic-dev
 * libsndfile1-dev (http://www.mega-nerd.com/libsndfile/)
 * libpulse-dev
 * libncurses5-dev (required by --enable-festival)
