--- a/src/README
+++ b/src/README
@@ -18,7 +18,7 @@ lookup a Chinese string: Dict.lookup(string)
 2.3 get DictItem from the first character: Dict.mDictItemArray[c.code]
 2.4 check mached word: DictItem.wordList
 2.5 get phonetic symbol: Character.phonSymbol
-3. if it's English, synth with Festival
+3. if it's English, synth with eSpeak or Festival
 4. else if there is phonSymbols of the word is recorded, get it
 5. else synth each phonSymbol
 
